--- a/src/app/accounting/provisioning-entries/view-provisioning-journal-entries/view-provisioning-journal-entries.component.html
+++ b/src/app/accounting/provisioning-entries/view-provisioning-journal-entries/view-provisioning-journal-entries.component.html
@@ -2,7 +2,7 @@
 
   <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{ "Accounting.ProvisioningEntriesComponent.ViewProvisioningJournalEntriesComponent.Filter" | translate }}</mat-label>
       <input matInput (keyup)="applyFilter($event)">
     </mat-form-field>
   </div>
@@ -12,52 +12,52 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Entry ID </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ProvisioningEntriesComponent.ViewProvisioningJournalEntriesComponent.id" | translate }} </th>
         <td mat-cell *matCellDef="let provisioningJournalEntry"> {{ provisioningJournalEntry.id }} </td>
       </ng-container>
 
       <ng-container matColumnDef="officeName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Office </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ProvisioningEntriesComponent.ViewProvisioningJournalEntriesComponent.officeName" | translate }} </th>
         <td mat-cell *matCellDef="let provisioningJournalEntry"> {{ provisioningJournalEntry.officeName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="transactionDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Transaction Date </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ProvisioningEntriesComponent.ViewProvisioningJournalEntriesComponent.transactionDate" | translate }} </th>
         <td mat-cell *matCellDef="let provisioningJournalEntry"> {{ provisioningJournalEntry.transactionDate }} </td>
       </ng-container>
 
       <ng-container matColumnDef="transactionId">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Transaction ID </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ProvisioningEntriesComponent.ViewProvisioningJournalEntriesComponent.transactionId" | translate }} </th>
         <td mat-cell *matCellDef="let provisioningJournalEntry"> {{ provisioningJournalEntry.transactionId }} </td>
       </ng-container>
 
       <ng-container matColumnDef="glAccountType">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ProvisioningEntriesComponent.ViewProvisioningJournalEntriesComponent.glAccountType" | translate }} </th>
         <td mat-cell *matCellDef="let provisioningJournalEntry"> {{ provisioningJournalEntry.glAccountType.value }} </td>
       </ng-container>
 
       <ng-container matColumnDef="createdByUserName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ProvisioningEntriesComponent.ViewProvisioningJournalEntriesComponent.createdByUserName" | translate }} </th>
         <td mat-cell *matCellDef="let provisioningJournalEntry"> {{ provisioningJournalEntry.createdByUserName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="glAccountCode">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Account Code </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ProvisioningEntriesComponent.ViewProvisioningJournalEntriesComponent.glAccountCode" | translate }} </th>
         <td mat-cell *matCellDef="let provisioningJournalEntry"> {{ provisioningJournalEntry.glAccountCode }} </td>
       </ng-container>
 
       <ng-container matColumnDef="glAccountName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Account Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ProvisioningEntriesComponent.ViewProvisioningJournalEntriesComponent.glAccountName" | translate }} </th>
         <td mat-cell *matCellDef="let provisioningJournalEntry"> {{ provisioningJournalEntry.glAccountName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="debit">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Debit </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ProvisioningEntriesComponent.ViewProvisioningJournalEntriesComponent.debit" | translate }} </th>
         <td mat-cell *matCellDef="let provisioningJournalEntry"><span *ngIf="provisioningJournalEntry.entryType.value === 'DEBIT'"> {{ (provisioningJournalEntry.currency.displaySymbol || provisioningJournalEntry.currency.code) + ' ' + provisioningJournalEntry.amount }} </span></td>
       </ng-container>
 
       <ng-container matColumnDef="credit">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Credit </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "Accounting.ProvisioningEntriesComponent.ViewProvisioningJournalEntriesComponent.credit" | translate }} </th>
         <td mat-cell *matCellDef="let provisioningJournalEntry"><span *ngIf="provisioningJournalEntry.entryType.value === 'CREDIT'"> {{ (provisioningJournalEntry.currency.displaySymbol || provisioningJournalEntry.currency.code) + ' ' + provisioningJournalEntry.amount }} </span></td>
       </ng-container>
 
