--- a/src/app/centers/centers-view/center-actions/activate-center/activate-center.component.html
+++ b/src/app/centers/centers-view/center-actions/activate-center/activate-center.component.html
@@ -7,20 +7,20 @@
       <mat-card-content>
 
           <mat-form-field fxFlex>
-            <mat-label>Activated On Date</mat-label>
+            <mat-label>{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.ActivateCenterComponent.activationDate" | translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="activationDatePicker" required formControlName="activationDate">
             <mat-datepicker-toggle matSuffix [for]="activationDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #activationDatePicker></mat-datepicker>
             <mat-error *ngIf="activateCenterForm.controls.activationDate.hasError('required')">
-              Activated On Date is <strong>required</strong>
+              {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.ActivateCenterComponent.erractivationDate" | translate }}<strong>{{ "CentersComponent.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="accent" [disabled]="!activateCenterForm.valid">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="accent" [disabled]="!activateCenterForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
