--- a/src/app/centers/centers-view/center-actions/attach-center-meeting/attach-center-meeting.component.html
+++ b/src/app/centers/centers-view/center-actions/attach-center-meeting/attach-center-meeting.component.html
@@ -9,62 +9,64 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Meeting Start Date</mat-label>
+            <mat-label>{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.AttachCenterMeetingComponent.startDate" | translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="startDatePicker" required formControlName="startDate">
             <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #startDatePicker></mat-datepicker>
             <mat-error *ngIf="centerMeetingForm.controls.startDate.hasError('required')">
-              Start Date is <strong>required</strong>
+              {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.AttachCenterMeetingComponent.errstartDate" | translate }}<strong>{{ "CentersComponent.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-checkbox class="m-t-10 m-b-10" labelPosition="before" formControlName="repeating">
-            Repeats?
+            {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.AttachCenterMeetingComponent.repeating" | translate }}
           </mat-checkbox>
 
           <mat-form-field *ngIf="centerMeetingForm.contains('frequency')">
-            <mat-label>Repetition Frequency</mat-label>
+            <mat-label>{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.AttachCenterMeetingComponent.frequency" | translate }}</mat-label>
             <mat-select formControlName="frequency">
               <mat-option *ngFor="let option of frequencyOptions" [value]="option.id">
                 {{ option.value }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="centerMeetingForm.controls.frequency.hasError('repeatsOnDay')">
-              Repetition Frequency is <strong>required</strong>
+              {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.AttachCenterMeetingComponent.errfrequency" | translate }}<strong>{{ "CentersComponent.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="centerMeetingForm.contains('interval')">
-            <mat-label>Repetition Interval</mat-label>
+            <mat-label>{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.AttachCenterMeetingComponent.interval" | translate }}</mat-label>
             <mat-select formControlName="interval">
               <mat-option *ngFor="let interval of repetitionIntervals" [value]="interval">
                 {{ interval }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="centerMeetingForm.controls.interval.hasError('repeatsOnDay')">
-              Repeition Interval is <strong>required</strong>
+              {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.AttachCenterMeetingComponent.errinterval" | translate }}<strong>{{ "CentersComponent.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="centerMeetingForm.contains('repeatsOnDay')">
-          <mat-label>Repeats on Day</mat-label>
+          <mat-label>{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.AttachCenterMeetingComponent.repeatsOnDay" | translate }}</mat-label>
           <mat-select formControlName="repeatsOnDay" required>
             <mat-option *ngFor="let day of repeatsOnDays" [value]="day.id">
               {{ day.value }}
             </mat-option>
           </mat-select>
           <mat-error *ngIf="centerMeetingForm.controls.repeatsOnDay.hasError('repeatsOnDay')">
-            At least <strong>one</strong> day must be selected
+            {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.AttachCenterMeetingComponent.Atleast" | translate }}
+            <strong>{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.AttachCenterMeetingComponent.one" | translate }}</strong>
+            {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.AttachCenterMeetingComponent.dayMustBeSelected" | translate }}
           </mat-error>
         </mat-form-field>
-  
+
         </div>
 
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!centerMeetingForm.valid" (click)="submit()">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!centerMeetingForm.valid" (click)="submit()">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
