--- a/src/app/centers/centers-view/center-actions/center-attendance/center-attendance.component.html
+++ b/src/app/centers/centers-view/center-actions/center-attendance/center-attendance.component.html
@@ -3,30 +3,30 @@
   <mat-card fxLayout="column" fxLayoutGap="3%">
 
     <mat-form-field fxFlex>
-      <mat-label>Meeting Date</mat-label>
+      <mat-label>{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.CenterAttendanceComponent.meetingDate" | translate }}</mat-label>
       <mat-select [formControl]="meetingDate">
         <mat-option *ngFor="let date of meetingDates" [value]="date">
           {{ date | date }}
         </mat-option>
       </mat-select>
-      <mat-hint>Next Meeting on: {{ this.centerData.collectionMeetingCalendar.nextTenRecurringDates[0] | date }}</mat-hint>
+      <mat-hint>{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.CenterAttendanceComponent.hint" | translate }} {{ this.centerData.collectionMeetingCalendar.nextTenRecurringDates[0] | date }}</mat-hint>
     </mat-form-field>
 
     <table class="mat-elevation-z1" mat-table [dataSource]="dataSource">
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.CenterAttendanceComponent.name" | translate }} </th>
         <td mat-cell *matCellDef="let member"> {{ member.clientId | find:membersData:'id':'displayName' }} </td>
       </ng-container>
 
       <ng-container matColumnDef="attendance">
-        <th mat-header-cell *matHeaderCellDef> Attendance </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.CenterAttendanceComponent.attendance" | translate }} </th>
         <td mat-cell *matCellDef="let member" [ngSwitch]="member.attendanceType">
-          <span *ngSwitchCase="1">Present</span>
-          <span *ngSwitchCase="2">Absent</span>
-          <span *ngSwitchCase="3">Approved</span>
-          <span *ngSwitchCase="4">Leave</span>
-          <span *ngSwitchCase="5">Late</span>
+          <span *ngSwitchCase="1">{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.CenterAttendanceComponent.Present" | translate }}</span>
+          <span *ngSwitchCase="2">{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.CenterAttendanceComponent.Absent" | translate }}</span>
+          <span *ngSwitchCase="3">{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.CenterAttendanceComponent.Approved" | translate }}</span>
+          <span *ngSwitchCase="4">{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.CenterAttendanceComponent.Leave" | translate }}</span>
+          <span *ngSwitchCase="5">{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.CenterAttendanceComponent.Late" | translate }}</span>
           <button mat-icon-button color="primary"
             (click)="editAttendance(member)">
             <fa-icon icon="pen"></fa-icon>
@@ -40,8 +40,8 @@
     </table>
 
     <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-      <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-      <button mat-raised-button color="primary" (click)="submit()" *midasHasPermission="'CREATE_MEETING'">Confirm</button>
+      <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+      <button mat-raised-button color="primary" (click)="submit()" *midasHasPermission="'CREATE_MEETING'">{{ "ShareButton.ConfirmEng" | translate }}</button>
     </mat-card-actions>
 
   </mat-card>
