--- a/src/app/centers/centers-view/center-actions/close-center/close-center.component.html
+++ b/src/app/centers/centers-view/center-actions/close-center/close-center.component.html
@@ -9,24 +9,24 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Closed On Date</mat-label>
+            <mat-label>{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.CloseCenterComponent.closureDate" | translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="closureDatePicker" required formControlName="closureDate">
             <mat-datepicker-toggle matSuffix [for]="closureDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #closureDatePicker></mat-datepicker>
             <mat-error *ngIf="closeCenterForm.controls.closureDate.hasError('required')">
-              Closed On Date is <strong>required</strong>
+              {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.CloseCenterComponent.errclosureDate" | translate }}<strong>{{ "CentersComponent.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Closure Reason</mat-label>
+            <mat-label>{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.CloseCenterComponent.closureReasonId" | translate }}</mat-label>
             <mat-select formControlName="closureReasonId">
               <mat-option *ngFor="let reason of closureData" [value]="reason.id">
                 {{ reason.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="closeCenterForm.controls.closureReasonId.hasError('required')">
-              CLosure Reason is <strong>required</strong>
+              {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.CloseCenterComponent.errclosureReasonId" | translate }}<strong>{{ "CentersComponent.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -35,8 +35,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="warn" [disabled]="!closeCenterForm.valid" *midasHasPermission="'CLOSE_CENTER'">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="warn" [disabled]="!closeCenterForm.valid" *midasHasPermission="'CLOSE_CENTER'">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
