--- a/src/app/centers/centers-view/center-actions/edit-center-meeting/edit-center-meeting.component.html
+++ b/src/app/centers/centers-view/center-actions/edit-center-meeting/edit-center-meeting.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end">
   <button mat-raised-button color="primary" (click)="editSchedule()">
     <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-    Edit Schedule
+    {{ "CentersComponent.CenterActionsComponent.EditCenterMeetingComponent.btnEditSchedule" | translate }}
   </button>
 </div>
 
@@ -16,52 +16,54 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Repetition Frequency</mat-label>
+            <mat-label>{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.EditCenterMeetingComponent.frequency" | translate }}</mat-label>
             <mat-select formControlName="frequency">
               <mat-option *ngFor="let option of frequencyOptions" [value]="option.id">
                 {{ option.value }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="centerEditMeetingForm.controls.frequency.hasError('repeatsOnDay')">
-              Repetition Frequency is <strong>required</strong>
+              {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.EditCenterMeetingComponent.errfrequency" | translate }}<strong>{{ "CentersComponent.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Repetition Interval</mat-label>
+            <mat-label>{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.EditCenterMeetingComponent.interval" | translate }}</mat-label>
             <mat-select formControlName="interval">
               <mat-option *ngFor="let interval of repetitionIntervals" [value]="interval">
                 {{ interval }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="centerEditMeetingForm.controls.interval.hasError('repeatsOnDay')">
-              Repeition Interval is <strong>required</strong>
+              {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.EditCenterMeetingComponent.errinterval" | translate }}<strong>{{ "CentersComponent.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="centerEditMeetingForm.contains('repeatsOnDay')">
-          <mat-label>Repeats on Day</mat-label>
+          <mat-label>{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.EditCenterMeetingComponent.repeatsOnDay" | translate }}</mat-label>
           <mat-select formControlName="repeatsOnDay" required>
             <mat-option *ngFor="let day of repeatsOnDays" [value]="day.id">
               {{ day.value }}
             </mat-option>
           </mat-select>
           <mat-error *ngIf="centerEditMeetingForm.controls.repeatsOnDay.hasError('repeatsOnDay')">
-            At least <strong>one</strong> day must be selected
+            {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.EditCenterMeetingComponent.Atleast" | translate }}
+            <strong>{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.EditCenterMeetingComponent.one" | translate }}</strong>
+            {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.EditCenterMeetingComponent.dayMustBeSelected" | translate }}
           </mat-error>
         </mat-form-field>
 
         <mat-form-field class="m-b-5">
-          <mat-label>Above Changes are Effective from</mat-label>
+          <mat-label>{{ "CentersComponent.CentersViewComponent.CenterActionsComponent.EditCenterMeetingComponent.startDate" | translate }}</mat-label>
           <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="startDatePicker" required formControlName="startDate">
           <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #startDatePicker></mat-datepicker>
           <mat-error *ngIf="centerEditMeetingForm.controls.startDate.hasError('required')">
-            Changes Affection Date is <strong>required</strong>
+            {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.EditCenterMeetingComponent.errstartDate" | translate }}<strong>{{ "CentersComponent.strongRequire" | translate }}</strong>
           </mat-error>
           <mat-hint>
-            Note: 'Repeats' and 'Repeats every' cannot not be modified if there are active accounts <br>
-            (JLG Loans, Recurring Deposits etc) dependent on this meeting.
+            {{ "CentersComponent.CentersViewComponent.CenterActionsComponent.EditCenterMeetingComponent.hint_2" | translate }}<br>
+
           </mat-hint>
         </mat-form-field>
 
@@ -70,8 +72,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!centerEditMeetingForm.valid" (click)="submit()">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!centerEditMeetingForm.valid" (click)="submit()">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
