--- a/src/app/centers/centers-view/center-actions/staff-assignment-history/staff-assignment-history.component.html
+++ b/src/app/centers/centers-view/center-actions/staff-assignment-history/staff-assignment-history.component.html
@@ -2,7 +2,7 @@
 
   <div class="back-button">
     <button type="button" color="primary" mat-raised-button [routerLink]="['../../']">
-      <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;Back
+      <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;{{ "ShareButton.BackEng" | translate }}
     </button>
   </div>
 
