--- a/src/app/centers/centers-view/general-tab/general-tab.component.html
+++ b/src/app/centers/centers-view/general-tab/general-tab.component.html
@@ -1,48 +1,48 @@
 <div class="tab-container mat-typography">
   <div *ngIf="centerViewData.status.value=='Closed'">
-    <h3 class="closedCenter">Center Closed</h3>
+    <h3 class="closedCenter">{{ "CentersComponent.CentersViewComponent.GeneralTabComponent.h3" | translate }}</h3>
   </div>
-  <h3>Summary Details</h3>
+  <h3>{{ "CentersComponent.CentersViewComponent.GeneralTabComponent.h3_2" | translate }}</h3>
   <div fxLayout="row" fxLayoutGap="32px" class="summary-details-container">
     <p>
-      Active Clients: {{centerSummaryData.activeClients}}<br />
-      Active Group Loans: {{centerSummaryData.activeGroupLoans}}<br />
-      Active Client Loans: {{centerSummaryData.activeClientLoans}}<br />
-      Active Overdue Group Loans: {{centerSummaryData.overdueGroupLoans}}<br />
+      {{ "CentersComponent.CentersViewComponent.GeneralTabComponent.activeClients" | translate }}{{centerSummaryData.activeClients}}<br />
+      {{ "CentersComponent.CentersViewComponent.GeneralTabComponent.activeGroupLoans" | translate }}{{centerSummaryData.activeGroupLoans}}<br />
+      {{ "CentersComponent.CentersViewComponent.GeneralTabComponent.activeClientLoans" | translate }}{{centerSummaryData.activeClientLoans}}<br />
+      {{ "CentersComponent.CentersViewComponent.GeneralTabComponent.overdueGroupLoans" | translate }}{{centerSummaryData.overdueGroupLoans}}<br />
     </p>
     <p>
-      Active Group Borrowers: {{centerSummaryData.activeGroupBorrowers}}<br />
-      Active Client Borrowers: {{centerSummaryData.activeClientBorrowers}}<br />
-      Active Overdue Client Loans: {{centerSummaryData.overdueClientLoans}}<br />
+      {{ "CentersComponent.CentersViewComponent.GeneralTabComponent.activeGroupBorrowers" | translate }}{{centerSummaryData.activeGroupBorrowers}}<br />
+      {{ "CentersComponent.CentersViewComponent.GeneralTabComponent.activeClientBorrowers" | translate }}{{centerSummaryData.activeClientBorrowers}}<br />
+      {{ "CentersComponent.CentersViewComponent.GeneralTabComponent.overdueClientLoans" | translate }}{{centerSummaryData.overdueClientLoans}}<br />
     </p>
   </div>
 
   <!-- Groups -->
   <ng-container *ngIf="groupResourceData.length > 0">
 
-    <h3>Groups</h3>
+    <h3>{{ "CentersComponent.CentersViewComponent.GeneralTabComponent.h3_3" | translate }}</h3>
 
     <table mat-table [dataSource]="groupResourceData" matSort>
 
       <ng-container matColumnDef="Account No">
-        <th mat-header-cell *matHeaderCellDef> Account Number </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "CentersComponent.CentersViewComponent.GeneralTabComponent.accountNoGroups" | translate }} </th>
         <td mat-cell *matCellDef="let element"> <i class="fa fa-stop" matTooltip="{{ element.status.value }}"
             [ngClass]="element.status.code|statusLookup"></i>
           {{element.accountNo}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Group Name">
-        <th mat-header-cell *matHeaderCellDef> Group Name </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "CentersComponent.CentersViewComponent.GeneralTabComponent.nameGroups" | translate }} </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Office Name">
-        <th mat-header-cell *matHeaderCellDef> Office Name </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "CentersComponent.CentersViewComponent.GeneralTabComponent.officeNameGroups" | translate }} </th>
         <td mat-cell *matCellDef="let element"> {{element.officeName}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Submitted On">
-        <th mat-header-cell *matHeaderCellDef> Submitted On </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "CentersComponent.CentersViewComponent.GeneralTabComponent.submittedOnDateGroups" | translate }} </th>
         <td mat-cell *matCellDef="let element"> {{element.timeline.submittedOnDate|date}} </td>
       </ng-container>
 
@@ -58,62 +58,62 @@
 
     <ng-container *ngIf="savingsAccountData.length > 0">
 
-      <h3>Savings Account Overview</h3>
+      <h3>{{ "CentersComponent.CentersViewComponent.GeneralTabComponent.h3_4" | translate }}</h3>
 
       <table mat-table [dataSource]="savingsAccountData" matSort>
 
         <ng-container matColumnDef="Account No">
-          <th mat-header-cell *matHeaderCellDef> Account No </th>
+          <th mat-header-cell *matHeaderCellDef> {{ "CentersComponent.CentersViewComponent.GeneralTabComponent.accountNo" | translate }} </th>
           <td mat-cell *matCellDef="let element"> <i class="fa fa-stop" matTooltip="{{ element.status.value }}"
               [ngClass]="element.status.code|statusLookup"></i>
             {{element.accountNo}} </td>
         </ng-container>
 
         <ng-container matColumnDef="Products">
-          <th mat-header-cell *matHeaderCellDef> Products </th>
+          <th mat-header-cell *matHeaderCellDef> {{ "CentersComponent.CentersViewComponent.GeneralTabComponent.productName" | translate }} </th>
           <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
         </ng-container>
 
         <ng-container matColumnDef="Balance">
-          <th mat-header-cell *matHeaderCellDef> Balance</th>
+          <th mat-header-cell *matHeaderCellDef> {{ "CentersComponent.CentersViewComponent.GeneralTabComponent.accountBalance" | translate }} </th>
           <td mat-cell *matCellDef="let element"> {{element.accountBalance | money}} </td>
         </ng-container>
 
         <ng-container matColumnDef="Actions">
-          <th mat-header-cell *matHeaderCellDef> Actions </th>
+          <th mat-header-cell *matHeaderCellDef> {{ "CentersComponent.CentersViewComponent.GeneralTabComponent.Actions" | translate }} </th>
           <td mat-cell *matCellDef="let element">
             <ng-container *ngIf="element.status.active">
               <button class="account-action-button" mat-raised-button color="primary" *ngIf="element.depositType.id == '100'"
                 (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Deposit']">
-                <i class="fa fa-arrow-right" matTooltip="Deposit"></i>
+                <i class="fa fa-arrow-right" [matTooltip]="'CentersComponent.CentersViewComponent.GeneralTabComponent.Deposit'| translate"></i>
               </button>
               <button class="account-action-button" mat-raised-button color="primary" *ngIf="element.depositType.id == '300'"
                 (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Deposit']">
-                <i class="fa fa-arrow-right" matTooltip="Deposit"></i>
+                <i class="fa fa-arrow-right" [matTooltip]="'CentersComponent.CentersViewComponent.GeneralTabComponent.Deposit'| translate"></i>
               </button>
               <button class="account-action-button" mat-raised-button color="primary" *ngIf="element.depositType.id == '100'"
                 (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Withdrawal']">
-                <i class="fa fa-arrow-left" matTooltip="Withdraw"></i>
+                <i class="fa fa-arrow-left" [matTooltip]="'CentersComponent.CentersViewComponent.GeneralTabComponent.Withdraw'| translate"></i>
               </button>
               <button class="account-action-button" mat-raised-button color="primary" *ngIf="element.depositType.id == '300'"
                 (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Withdrawal']">
-                <i class="fa fa-arrow-left" matTooltip="Withdraw"></i>
+                <i class="fa fa-arrow-left" [matTooltip]="'CentersComponent.CentersViewComponent.GeneralTabComponent.Withdraw'| translate"></i>
               </button>
             </ng-container>
             <ng-container *ngIf="element.status.submittedAndPendingApproval">
               <button class="account-action-button" mat-raised-button color="primary"
                 (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Approve']">
-                <i class="fa fa-check" matTooltip="Approve"></i>
+                <i class="fa fa-check" [matTooltip]="'CentersComponent.CentersViewComponent.GeneralTabComponent.Approve'| translate"></i>
               </button>
             </ng-container>
             <ng-container *ngIf="!element.status.submittedAndPendingApproval && !element.status.active">
               <button class="account-action-button" mat-raised-button color="primary"
                 (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Undo Approval']">
-                <i class="fa fa-undo" matTooltip="Undo Approve"></i>
+                <i class="fa fa-undo" [matTooltip]="'CentersComponent.CentersViewComponent.GeneralTabComponent.UndoApprove'| translate"></i>
               </button>
               <button class="account-action-button" mat-raised-button color="primary"
                 (click)="routeEdit($event)" [routerLink]="['../','savings-accounts', element.id, 'actions', 'Activate']">
-                <i class="fa fa-power-off" matTooltip="Activate"></i>
+                <i class="fa fa-power-off" [matTooltip]="'CentersComponent.CentersViewComponent.GeneralTabComponent.Activate'| translate"></i>
               </button>
             </ng-container>
           </td>
