--- a/src/app/centers/centers.component.html
+++ b/src/app/centers/centers.component.html
@@ -7,15 +7,15 @@
       <mat-form-field>
         <input matInput placeholder="Search by ExternalID" [formControl]="externalId">
       </mat-form-field>
-      <mat-checkbox #showClosedCenters labelPosition="after" (change)="changeShowClosedCenters()">Show Closed Centers
+      <mat-checkbox #showClosedCenters labelPosition="after" (change)="changeShowClosedCenters()">{{ "CentersComponent.checkboxShowClosedCenters" | translate }}
       </mat-checkbox>
     </div>
     <div class="action-button" fxLayoutGap="25px">
       <button mat-raised-button color="primary" [routerLink]="['../', 'organization', 'bulk-import', 'Centers']" *midasHasPermission="'CREATE_CENTER'">
-        <fa-icon icon="download"></fa-icon>&nbsp;&nbsp;Import Center
+        <fa-icon icon="download"></fa-icon>&nbsp;&nbsp;{{ "CentersComponent.btnImportCenter" | translate }}
       </button>
       <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_CENTER'">
-        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;Create Center
+        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{ "CentersComponent.btnCreateCenter" | translate }}
       </button>
     </div>
   </div>
@@ -23,22 +23,22 @@
   <table mat-table [dataSource]="dataSource" matSort>
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "CentersComponent.table.name" | translate }} </th>
       <td mat-cell *matCellDef="let center"> {{ center.name }} </td>
     </ng-container>
 
     <ng-container matColumnDef="accountNo">
-      <th mat-header-cell *matHeaderCellDef> Account # </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "CentersComponent.table.accountNo" | translate }} </th>
       <td mat-cell *matCellDef="let center"> {{ center.accountNo }} </td>
     </ng-container>
 
     <ng-container matColumnDef="externalId">
-      <th mat-header-cell *matHeaderCellDef> ExternalID </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "CentersComponent.table.externalId" | translate }} </th>
       <td mat-cell *matCellDef="let center"> {{ center.externalId }} </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "CentersComponent.table.status" | translate }} </th>
       <td mat-cell *matCellDef="let row">
         <div [ngClass]="row.status.code|statusLookup">
           <fa-icon icon="stop"></fa-icon>
@@ -47,7 +47,7 @@
     </ng-container>
 
     <ng-container matColumnDef="officeName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Office Name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ "CentersComponent.table.officeName" | translate }} </th>
       <td mat-cell *matCellDef="let center"> {{ center.officeName }} </td>
     </ng-container>
 
