--- a/src/app/centers/create-center/create-center.component.html
+++ b/src/app/centers/create-center/create-center.component.html
@@ -9,30 +9,32 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Name</mat-label>
+            <mat-label>{{ "CentersComponent.CreateCenterComponent.name" | translate }}</mat-label>
             <input matInput required formControlName="name">
             <mat-error *ngIf="centerForm.controls.name.hasError('required')">
-              Center Name is <strong>required</strong>
+              {{ "CentersComponent.CreateCenterComponent.errname" | translate }}<strong>{{ "CentersComponent.strongRequire" | translate }}</strong>
             </mat-error>
             <mat-error *ngIf="centerForm.controls.name.hasError('pattern')">
-              Center Name <strong>cannot</strong> begin with a special character or number
+              {{ "CentersComponent.CreateCenterComponent.CenterName" | translate }}
+              <strong>{{ "CentersComponent.CreateCenterComponent.cannot" | translate }}</strong>
+              {{ "CentersComponent.CreateCenterComponent.alert" | translate }}
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Office</mat-label>
+            <mat-label>{{ "CentersComponent.CreateCenterComponent.officeId" | translate }}</mat-label>
             <mat-select required formControlName="officeId">
               <mat-option *ngFor="let office of officeData" [value]="office.id">
                 {{ office.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="centerForm.controls.officeId.hasError('required')">
-              Office is <strong>required</strong>
+              {{ "CentersComponent.CreateCenterComponent.errofficeId" | translate }}<strong>{{ "CentersComponent.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Staff</mat-label>
+            <mat-label>{{ "CentersComponent.CreateCenterComponent.staffId" | translate }}</mat-label>
             <mat-select formControlName="staffId">
               <mat-option *ngFor="let staff of staffData" [value]="staff.id">
                 {{ staff.displayName }}
@@ -41,36 +43,36 @@
           </mat-form-field>
 
           <mat-checkbox labelPosition="before" formControlName="active">
-            Active
+            {{ "CentersComponent.CreateCenterComponent.active" | translate }}
           </mat-checkbox>
 
           <mat-form-field *ngIf="this.centerForm.controls.active.value">
-            <mat-label>Activation Date</mat-label>
+            <mat-label>{{ "CentersComponent.CreateCenterComponent.activationDate" | translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="activationDatePicker" required formControlName="activationDate">
             <mat-datepicker-toggle matSuffix [for]="activationDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #activationDatePicker></mat-datepicker>
             <mat-error *ngIf="centerForm.controls.activationDate.hasError('required')">
-               Activation Date is <strong>required</strong>
+              {{ "CentersComponent.CreateCenterComponent.erractivationDate" | translate }}<strong>{{ "CentersComponent.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>External id</mat-label>
+            <mat-label>{{ "CentersComponent.CreateCenterComponent.externalId" | translate }}</mat-label>
             <input matInput formControlName="externalId">
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Submitted on</mat-label>
+            <mat-label>{{ "CentersComponent.CreateCenterComponent.submittedOnDate" | translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="submittedOnDatePicker" required formControlName="submittedOnDate">
             <mat-datepicker-toggle matSuffix [for]="submittedOnDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #submittedOnDatePicker></mat-datepicker>
             <mat-error *ngIf="centerForm.controls.submittedOnDate.hasError('required')">
-              Submission Date is <strong>required</strong>
+              {{ "CentersComponent.CreateCenterComponent.errsubmittedOnDate" | translate }}<strong>{{ "CentersComponent.strongRequire" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Select and Add groups</mat-label>
+            <mat-label>{{ "CentersComponent.CreateCenterComponent.groupChoice" | translate }}</mat-label>
             <mat-select [formControl]="groupChoice">
               <mat-option *ngFor="let group of groupsData" [value]="group">
                 {{ group.name }}
@@ -84,27 +86,27 @@
 
           <div class="mat-table" *ngIf="groupChoice.value">
             <div class="mat-header-row">
-              <div class="mat-header-cell">Group Details</div>
+              <div class="mat-header-cell">{{ "CentersComponent.CreateCenterComponent.groupDetails" | translate }}</div>
               <button mat-icon-button (click)="addGroup()">
                 <fa-icon icon="plus"></fa-icon>
               </button>
             </div>
             <div class="mat-row">
-              <div class="mat-cell">Name</div>
+              <div class="mat-cell">{{ "CentersComponent.CreateCenterComponent.groupChoiceName" | translate }}</div>
               <div class="mat-cell">{{groupChoice.value.name}}</div>
             </div>
             <div class="mat-row">
-              <div class="mat-cell">Id</div>
+              <div class="mat-cell">{{ "CentersComponent.CreateCenterComponent.groupChoiceId" | translate }}</div>
               <div class="mat-cell">{{groupChoice.value.id}}</div>
             </div>
             <div class="mat-row">
-              <div class="mat-cell">Office</div>
+              <div class="mat-cell">{{ "CentersComponent.CreateCenterComponent.groupChoiceOfficeName" | translate }}</div>
               <div class="mat-cell">{{groupChoice.value.officeName}}</div>
             </div>
           </div>
 
           <mat-nav-list *ngIf="groupMembers.length">
-            <h3 matSubheader>Selected Groups</h3>
+            <h3 matSubheader>{{ "CentersComponent.CreateCenterComponent.h3" | translate }}</h3>
             <div mat-list-item *ngFor="let group of groupMembers index as i">
               <button mat-icon-button (click)="removeGroup(i)">
                 <fa-icon icon="trash"></fa-icon>
@@ -118,8 +120,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!centerForm.valid" (click)="submit()" *midasHasPermission="'CREATE_CENTER'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!centerForm.valid" (click)="submit()" *midasHasPermission="'CREATE_CENTER'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
