--- a/src/app/centers/edit-center/edit-center.component.html
+++ b/src/app/centers/edit-center/edit-center.component.html
@@ -9,18 +9,20 @@
 	    <div fxLayout="column">
 
 		  <mat-form-field>
-		    <mat-label>Name</mat-label>
+		    <mat-label>{{ "CentersComponent.CreateCenterComponent.name" | translate }}</mat-label>
 			<input matInput required formControlName="name">
 			<mat-error *ngIf="editCenterForm.controls.name.hasError('required')">
-			  Center Name is <strong>required</strong>
+			  {{ "CentersComponent.CreateCenterComponent.errname" | translate }}<strong>{{ "CentersComponent.strongRequire" | translate }}</strong>
 			</mat-error>
 			<mat-error *ngIf="editCenterForm.controls.name.hasError('pattern')">
-			  Center Name <strong>cannot</strong> begin with a special character or number
+			  {{ "CentersComponent.CreateCenterComponent.CenterName" | translate }}
+        <strong>{{ "CentersComponent.CreateCenterComponent.cannot" | translate }}</strong>
+        {{ "CentersComponent.CreateCenterComponent.alert" | translate }}
 			</mat-error>
 			</mat-form-field>
 
 			<mat-form-field>
-			  <mat-label>Staff</mat-label>
+			  <mat-label>{{ "CentersComponent.CreateCenterComponent.staffId" | translate }}</mat-label>
 			  <mat-select formControlName="staffId">
 				<mat-option *ngFor="let staff of staffs" [value]="staff.id">
 				  {{ staff.displayName }}
@@ -29,19 +31,19 @@
 			</mat-form-field>
 
 			<mat-form-field>
-			  <mat-label>External id</mat-label>
+			  <mat-label>{{ "CentersComponent.CreateCenterComponent.externalId" | translate }}</mat-label>
 			  <input matInput formControlName="externalId">
 			</mat-form-field>
 
 			<ng-container *ngIf="centerData.status.value=='Pending'">
 			  <mat-form-field>
-				<mat-label>Activation date</mat-label>
+				<mat-label>{{ "CentersComponent.CreateCenterComponent.activationDate" | translate }}</mat-label>
 				<input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="activatedOnDatePicker" required
 				  formControlName="activationDate">
 				<mat-datepicker-toggle matSuffix [for]="activatedOnDatePicker"></mat-datepicker-toggle>
 				<mat-datepicker #activatedOnDatePicker></mat-datepicker>
 				<mat-error *ngIf="editCenterForm.controls.activationDate.hasError('required')">
-				  Activation Date is <strong>required</strong>
+				  {{ "CentersComponent.CreateCenterComponent.erractivationDate" | translate }}<strong>{{ "CentersComponent.strongRequire" | translate }}</strong>
 				</mat-error>
 			  </mat-form-field>
 			</ng-container>
@@ -51,8 +53,8 @@
 	  </mat-card-content>
 
 	  <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-	    <button type="button" mat-raised-button [routerLink]="['../general']">Cancel</button>
-	    <button mat-raised-button color="accent" [disabled]="!editCenterForm.valid">Confirm</button>
+	    <button type="button" mat-raised-button [routerLink]="['../general']">{{ "ShareButton.CancelEng" | translate }}</button>
+	    <button mat-raised-button color="accent" [disabled]="!editCenterForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
 	  </mat-card-actions>
 
 	</form>
